syntax = "proto3";
package Collplex.Models;

/* 客户 */
message Client {

	/* 客户名称 */
	string name = 1;

	/* 客户密钥，用于数据加解密 */
	string clientSecret = 2;

	/* 客户子节点总共最多可以注册多少业务 */
	int32 maxServices = 3;

	/* 客户子节点注册周期，单位秒，客户子节点必须在这个时间以内至少重复注册一次以报告存活，否则本中心节点会认为子节点业务宕机 */
	int32 regIntervalSeconds = 4;

	/* 允许中心节点请求子节点业务时的最大等待时间 */
	int32 timeout = 5;

	 /* 是否记录子节点请求 */
	bool logUserRequest = 6;

	/* logUserRequest 为 false 时，此项无效。是否记录子节点请求过来的数据体(Body)，如果为是，则用户访问日志中将记录用户的请求数据体 */
	bool logUserPayload = 7;

	/* logUserRequest 为 false 时，此项无效。是否按天切割记录访问日志 */
	bool logRolling = 8;

	message LoadBalancerConfiguration {
		string key = 1;
		enum LoadBalanceType {
			NO_LOAD_BALANCE = 0;
			SMOOTH_WEIGHT_ROUND_ROBIN = 1;
			LEAST_REQUESTS = 2;
			RANDOM = 3;
			SOURCE_IP_HASH = 4;	
		}
		LoadBalanceType type = 2;
	}
	repeated LoadBalancerConfiguration loadBalancerConfigurations = 9;
}