syntax = "proto3";
package Collplex.Models.Node;

message NodeData {

	/* 子节点业务元素 */
	message NodeService {

		/* 子节点业务标识 Key */
		string key = 1;

		/* 子节点友好名称 */
		string name = 2;

		/* 子节点所对应的该业务的完整URL */
		string nodeUrl = 3;

		/* 子节点的服务是是否只对同主体的其他子节点开放，如果为 False，则子节点的业务外网可达 */
		bool private = 4;

		/* UNIX 时间戳 首次注册的时间 */
		int64 regTimestamp = 5;

		/* UNIX 时间戳 过期时间。如果子节点超过规定的时间(regInterval)没有报告自己存活，即此业务暂时不能使用。 */
		int64 expireTimestamp = 6;
	}
	repeated NodeService services = 1;
}
